logs/t4k.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pyro4'...
Listing './lib/python3.5/site-packages/Pyro4/socketserver'...
Listing './lib/python3.5/site-packages/Pyro4/test'...
Listing './lib/python3.5/site-packages/Pyro4/utils'...
Listing './lib/python3.5/site-packages/Pyro4-4.63.dist-info'...
Listing './lib/python3.5/site-packages/natsort'...
Listing './lib/python3.5/site-packages/natsort/compat'...
Listing './lib/python3.5/site-packages/natsort-5.1.1.dist-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/serpent-1.23.dist-info'...
Listing './lib/python3.5/site-packages/setproctitle-1.1.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/t4k'...
Compiling './lib/python3.5/site-packages/t4k/basic_manager_test.py'...
***   File "./lib/python3.5/site-packages/t4k/basic_manager_test.py", line 36
    print my_object.get()
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/t4k/extrema.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (extrema.py, line 39)
Compiling './lib/python3.5/site-packages/t4k/managed_process.py'...
***   File "./lib/python3.5/site-packages/t4k/managed_process.py", line 109
    print 'Manager: respawning process...'
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/t4k/mem_server.py'...
***   File "./lib/python3.5/site-packages/t4k/mem_server.py", line 29
    print 'trying to remember'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/t4k/persistent_ordered_dict.py'...
***   File "./lib/python3.5/site-packages/t4k/persistent_ordered_dict.py", line 164
    print fname
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/t4k/remem_server.py'...
***   File "./lib/python3.5/site-packages/t4k/remem_server.py", line 35
    print 'trying to remember'
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/t4k/test_clean_exit.py'...
***   File "./lib/python3.5/site-packages/t4k/test_clean_exit.py", line 29
    print 'initializing...'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/t4k/test_selenium_crawler.py'...
***   File "./lib/python3.5/site-packages/t4k/test_selenium_crawler.py", line 21
    print '\nfetching %s' % url
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/t4k/test_shared_progress_tracker.py'...
***   File "./lib/python3.5/site-packages/t4k/test_shared_progress_tracker.py", line 24
    print tracker['yo'], '(should be 20000.)'
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/t4k/token_map.py'...
***   File "./lib/python3.5/site-packages/t4k/token_map.py", line 123
    print 'Warning, unrecognized token: %s' % token
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/t4k/track_progress.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (track_progress.py, line 10)
Listing './lib/python3.5/site-packages/t4k-0.6.3.egg-info'...
Listing './lib/python3.5/site-packages/tastypy'...
Compiling './lib/python3.5/site-packages/tastypy/_deep_proxy.py'...
***   File "./lib/python3.5/site-packages/tastypy/_deep_proxy.py", line 44
    print key_tuple, '<--', val
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tastypy/file_utils.py'...
***   File "./lib/python3.5/site-packages/tastypy/file_utils.py", line 244
    print blacklist_match
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tastypy/shared_pod_example.py'...
***   File "./lib/python3.5/site-packages/tastypy/shared_pod_example.py", line 23
    print key, val
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tastypy-0.0.3.egg-info'...
Listing './lib/python3.5/site-packages/tblib'...
Listing './lib/python3.5/site-packages/tblib-1.3.2.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
